<resources>
    <string-array name="hari">
        <item>Pilih hari konsultasi</item>
        <item>Senin</item>
        <item>Selasa</item>
        <item>Rabu</item>
        <item>Kamis</item>
        <item>Jumat</item>
        <item>Sabtu</item>
        <item>Minggu</item>
    </string-array>
    <string name="app_name">MedTek</string>
    <string name="hai">Hai, selamat datang</string>
    <string name="hi">Hai,</string>
    <string name="home">Beranda</string>
    <string name="chat">Obrolan</string>
    <string name="others">Lainnya</string>
    <string name="notif">Lainnya</string>
    <string name="welcome">Welcome</string>
    <string name="sebdokter">Sebagai Dokter</string>
    <string name="dafsebdokter">Daftar sebagai Dokter</string>
    <string name="dokter">Dokter</string>
    <string name="sebpasien">Sebagai Pasien</string>
    <string name="dafsebpasien">Daftar sebagai Pasien</string>
    <string name="daftar">Daftar</string>
    <string name="today">Hari ini</string>
    <string name="day">Hari</string>
    <string name="amount">Nominal</string>
    <string name="hint_nominal">Isi nominal</string>
    <string name="ataupilih">Atau Pilih Nominal</string>
    <string name="kemarin">Kemarin</string>
    <string name="masuk">Masuk</string>
    <string name="pasien">Pasien</string>
    <string name="totalsaldo">Total Saldo</string>
    <string name="recenttransc">Transaksi Terkini</string>
    <string name="selamatdatang">Selamat datang</string>
    <string name="lupapassword">Lupa password?</string>
    <string name="silahkanmasuk">Silahkan masuk untuk melanjutkan</string>
    <string name="silahkandaftar">Silahkan daftar untuk melanjutkan</string>
    <string name="jasakami">Silahkan masuk terlebih dahulu untuk menggunakan jasa kami</string>
    <string name="belumpunya">Belum punya akun?</string>
    <string name="sudahpunya">Sudah punya akun?</string>
    <string name="minTopup">Melewati batas minimum isi ulang.</string>
    <string name="maxTopup">Melebihi batas maximum isi ulang.</string>
    <string name="silahkanisinominal">Silahkan isi nominal isi ulang terlebih dahulu.</string>
    <string name="paynow">Bayar Sekarang</string>
    <string name="hint_nama_lngkap"><font size="12"><b>Nama Lengkap</b></font></string>
    <string name="hint_email"><font size="12"><b>Email</b></font></string>
    <string name="hint_password"><font size="12"><b>Password</b></font></string>
    <string name="hint_repassword"><font size="12"><b>Re-Password</b></font></string>
    <string name="welcomeback">Selamat datang kembali,</string>
    <string name="user_name">Jhon Doe!</string>
    <string name="search">Cari dokter di sini...</string>
    <string name="saldo">Saldo</string>
    <string name="saldo_value">Rp100.000</string>
    <string name="topup">Top Up</string>
    <string name="withdraw">Withdraw</string>
    <string name="history">History</string>
    <string name="detail">Detail</string>
    <string name="separator">Separator</string>
    <string name="popdok">Dokter populer</string>
    <string name="rsrekomendasi">Rekomendasi Rumah Sakit</string>
    <string name="drpopuler">Dokter Populer</string>
    <string name="lihatsemua">Lihat semua</string>
    <string name="nama_rs">RSUPN Cipto Mangunkusumo</string>
    <string name="tipe_rs">Rumah Sakit Umum</string>
    <string name="lokasi_rs">Senen, Jakarta Pusat</string>
    <string name="nama_dr">dr. Natya Anna Pradibta</string>
    <string name="spes_dr">Pediatric Cardiology</string>
    <string name="kantor_dr">Siloam Hospital TB Simatupang</string>
    <string name="lokasi_dr">Cilandak, Jakarta Selatan</string>
    <string name="buatjanji">Buat Janji</string>
    <string name="artikelkesehatan">Artikel Kesehatan</string>
    <string name="titleartikel">Cara Mudah Menjaga Kesehatan Jantung</string>
    <string name="nama_user">Jhon Doe</string>
    <string name="email_user">jhondoe@gmail.com</string>
    <string name="notifikasi">Notifikasi</string>
    <string name="tarik">Tarik</string>
    <string name="isiulang">Isi ulang</string>
    <string name="pilihjadwal">Pilih jadwal</string>
    <string name="riwayat">Riwayat</string>
    <string name="riwayat_konsultasi">Riwayat Konsultasi</string>
    <string name="wallet">Wallet</string>
    <string name="wallet_saldo">Saldo Dompetku</string>
    <string name="bank_transfer_and_other">Transfer antar bank atau lainnya</string>
    <string name="pilih_payment_method">Pilih metode pembayaran</string>
    <string name="payment_method">Metode pembayaran</string>
    <string name="jadwal_saya">Jadwal Saya</string>
    <string name="invitefriend">Undang Teman</string>
    <string name="translate">Ubah Bahasa</string>
    <string name="bantuan">Bantuan</string>
    <string name="nilaikami">Nilai Kami</string>
    <string name="rating">5.0</string>
    <string name="lamakerja">2 Tahun</string>
    <string name="harga">Rp50.000</string>
    <string name="pilihtanggalkonsultasi">Pilih tanggal konsultasi Anda</string>
    <string name="keluar">Keluar</string>
    <string name="detaildokter">Detail dokter</string>
    <string name="tahun">Tahun</string>
    <string name="pop">Tempat praktek</string>
    <string name="rat" translatable="false">Rating</string>
    <string name="drrat">Rating dokter</string>
    <string name="lulusandari">Lulusan dari</string>
    <string name="review">Ulasan</string>
    <string name="exp">Pengalaman</string>
    <string name="address">Alamat</string>
    <string name="blmadaulasan">(Belum ada ulasan)</string>
    <string name="directme">Arahkan Saya</string>
    <string name="ui">Universitas Indonesia</string>
    <string name="selanjutnya">Selanjutnya</string>
    <string name="formattidakvalid">*Format tidak valid</string>
    <string name="verifikasiakunanda">Verifikasi akun anda</string>
    <string name="silahkanupload">Silahkan upload SIP (Surat Izin Praktik) anda untuk memverifikasi kebenaran akun ini</string>
    <string name="silahkanuploadKTP">Silahkan upload KTP (Kartu Tanda Penduduk) anda untuk memverifikasi kebenaran akun ini</string>
    <string name="silahkanuploadbuktitrf">Silahkan upload bukti transfer anda. Proses ini guna untuk memvalidasi bahwa anda sudah benar-benar transfer.</string>
    <string name="unggahfoto">Unggah Foto</string>
    <string name="passwordsama">Password harus sama</string>
    <string name="passwordmin">Password minimal harus 8 karakter</string>
    <string name="isidatadiri">Silahkan isi data diri terlebih dahulu</string>
    <string name="formatemail">Format email anda tidak valid</string>
    <string name="ambilgambardari">Ambil gambar dari</string>
    <string name="darikamera">Dari kamera</string>
    <string name="darigaleri">Dari galeri</string>
    <string name="daftarberhasil">Daftar Berhasil</string>
    <string name="uploadBuktiTrf">Upload bukti transfer</string>
    <string name="oke">Oke</string>
    <string name="kirim">Kirim</string>
    <string name="pick">Pilih</string>
    <string name="terima">Terima</string>
    <string name="tolak">Tolak</string>
    <string name="menunggukonfirmasi">Menunggu konfirmasi</string>
    <string name="janjibesok">Janji kamu selanjutnya</string>
    <string name="masukberhasil">Masuk berhasil</string>
    <string name="silahkanunggahfoto">Silahkan unggah foto terlebih dahulu</string>
    <string name="pendaftaranakan">Pendaftaran akan diproses 1-3 hari kerja, mohon untuk menunggu konfirmasi kebenaran akun anda oleh Admin kami.</string>
    <string name="emailsudahdigunakan">Email sudah digunakan oleh pengguna lain.</string>
    <string name="silahkanlakukanverifikasi">Silahkan lakukan verifikasi akun anda dengan cara membuka pesan masuk pada email yang telah didaftarkan.</string>
    <string name="verifikasiakunmedtek">MedTek - Verifikasi Email</string>
    <string name="bodyemail_1">Untuk memverifikasi</string>
    <string name="bodyemail_2">sebagai ID MedTek Anda, klik tautan ini:</string>
    <string name="emailtidakditemukan">Email tidak ditemukan</string>
    <string name="unverified">Email belum diverifikasi</string>
    <string name="wrongpassword">Password tidak sesuai</string>
    <string name="mohontunggu">Mohon tunggu...</string>
    <string name="undangteman">Undang teman</string>
    <string name="transfer">Transfer</string>
    <string name="recipient">Penerima</string>
    <string name="sender">Pengirim</string>
    <string name="kosong"></string>
    <string name="buktitrf">Bukti transfer</string>
    <string name="isiform">Silahkan isi form dengan benar!</string>
    <string name="banklogo">Bank Logo</string>
    <string name="BTPN">Jenis Bank:\nBTPN</string>
    <string name="kodeBank">Kode Bank:\n213</string>
    <string name="baNumber">Nomor Rekening Bank</string>
    <string name="pilihwaktu">Pilih waktu konsultasi Anda</string>
    <string name="pagi">Pagi</string>
    <string name="siang">Siang</string>
    <string name="sore">Sore</string>
    <string name="malam">Malam</string>
    <string name="verfikasisekarang">Verifikasi Sekarang</string>
    <string name="belumterverifikasi">Belum terverifikasi</string>
    <string name="terverifikasi">Terverifikasi</string>
    <string name="marikita">Mari undang teman untuk mencoba MedTek!</string>
    <string name="jadimereka">Jadi mereka bisa mendapat manfaat dengan mengalami MedTek dan itu fasilitasnya, sama seperti Anda!</string>
    <string name="cekverify">Periksa Verifikasi</string>
    <string name="emailkamu">Email anda belum diverifikasi, mohon untuk verifikasi email anda agar dapat menggunakan fitur kami sepenuhnya.</string>
    <string name="emailanda">Email anda telah terverifikasi dengan aplikasi kami.</string>
    <string name="ubahprofile">Sunting profil</string>
    <string name="ubahpassword">Ubah password</string>
    <string name="tokenexpired">Refresh Token Kedaluwarsa</string>
    <string name="mainmenu">Menu utama</string>
    <string name="namalengkap">Nama Lengkap</string>
    <string name="email">Email</string>
    <string name="jk">Jenis Kelamin</string>
    <string name="tgl">Tanggal Lahir</string>
    <string name="tgl_hint">Pilih Tanggal Lahir</string>
    <string name="no_hp">Nomor Telepon</string>
    <string name="no_rekening">Nomor Rekening</string>
    <string name="pendidikan_terakhir">Pendidikan Terakhir</string>
    <string name="notelp_hint">08XX-XXXX-XXXX</string>
    <string name="norek_hint">900XXXXXXXX</string>
    <string name="pendidikan_terakhir_hint">S2 Ilmu Kedokteran Universitas Indonesia</string>
    <string name="pengalaman_kerja_hint">2 Tahun</string>
    <string name="pengalaman_kerja">Pengalaman Kerja</string>
    <string name="harga_konsultasi">Biaya Konsultasi</string>
    <string name="male">Pria</string>
    <string name="female">Wanita</string>
    <string name="cari">Cari</string>
    <string name="drrs">RSUPN Cipto Mangunkusumo</string>
    <string name="drrsloc">Senen, Jakarta Pusat</string>
    <string name="berhasil">Berhasil</string>
    <string name="batal">Batal</string>
    <string name="pembayaranberhasil">Pembayaran Anda telah berhasil.</string>
    <string name="haraptunggu">Harap tunggu konfirmasi dari dokter.</string>
    <string name="konfirmasipasienkamu">Konfirmasi janji</string>
    <string name="apakahkamuyakin">Apakah anda yakin ingin menerima janji ini?</string>
    <string name="denganmenerimaini">Dengan menerima janji ini, kamu setuju dengan <a href="http://www.google.com"><i>syarat</i></a> dan <a href="http://www.google.com"><i>ketentuan</i></a> pada aplikasi ini.</string>
    <string name="cancel">Batal</string>
    <string name="end_session_title">Konfirmasi Akhiri Sesi</string>
    <string name="end_session_first_p">Apakah Anda yakin ingin mengakhiri sesi?</string>
    <string name="end_session_second_p">Anda tidak dapat mengirim pesan kembali ketika sesi berakhir.</string>
    <string name="end_session_btn">Ya, Saya ingin mengakhiri sesi ini</string>
</resources>