<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/PaddedLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_rounded_dialog">

    <View
        android:layout_width="37.0dip"
        android:layout_height="2.0dip"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/default_small_margin"
        android:background="@drawable/ic_line_rounded" />

    <View
        android:layout_width="37.0dip"
        android:layout_height="2.0dip"
        android:layout_gravity="center"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="@dimen/default_long_margin"
        android:background="@drawable/ic_line_rounded" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_screen_margin"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/end_session_title"
        android:textColor="@color/blackSolid"
        android:textSize="@dimen/text_24" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_small_margin"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/end_session_first_p"
        android:textColor="@color/greySemiPrimary" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_screen_margin"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/end_session_second_p"
        android:textColor="@color/greySemiPrimary" />

    <Button
        android:id="@+id/btn_end_session"
        style="@style/ButtonSolid"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginBottom="@dimen/default_small_margin"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/end_session_btn" />

    <Button
        android:id="@+id/btn_close"
        style="@style/ButtonSolidWhite"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/cancel" />

</LinearLayout>