<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog_inset"
    android:layout_centerHorizontal="true">

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_done"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/daftarberhasil"/>

    <TextView
        android:id="@+id/tv_berhasil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/berhasil"
        android:layout_below="@id/image_view"
        android:fontFamily="@font/roboto_bold"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/tv_pembayaran_berhasil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pembayaranberhasil"
        android:layout_below="@id/tv_berhasil"
        android:fontFamily="@font/roboto_regular"
        android:textColor="@android:color/black"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/tv_harap_tunggu"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:text="@string/haraptunggu"
        android:layout_below="@id/tv_pembayaran_berhasil"
        android:fontFamily="@font/roboto_regular"
        android:textColor="@android:color/black"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:background="@drawable/bg_button_selector"
        android:layout_below="@id/tv_harap_tunggu"
        android:layout_marginVertical="16dp"
        android:paddingHorizontal="@dimen/margin_32"
        android:layout_centerHorizontal="true"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/selanjutnya"/>

</RelativeLayout>