<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:gravity="center"
    android:padding="16dp"
    android:id="@+id/bottomSheetContainer"
    android:background="@drawable/bg_bottom_sheet">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cekverify"
        android:textSize="18sp"
        android:layout_toStartOf="@id/is_verify"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/is_verify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/belumterverifikasi"
        android:textSize="14sp"
        android:textColor="@color/textColorGray"
        android:layout_alignParentEnd="true"
        android:fontFamily="@font/roboto_mediumitalic"
        android:gravity="end"
        android:padding="6dp"
        android:background="@drawable/bg_button_red"
        android:backgroundTint="@color/textColorLightGray"/>

    <com.codesgood.views.JustifiedTextView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/emailkamu"
        android:layout_below="@id/is_verify"
        android:layout_marginTop="8dp"
        android:textColor="@color/textColorDark"/>
    
    <Button
        android:id="@+id/verify_now"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:text="@string/verfikasisekarang"
        android:layout_below="@id/content"
        android:background="@drawable/bg_button_red"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:layout_marginTop="16dp"/>

</RelativeLayout>