<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog_inset_32"
    android:backgroundTint="@android:color/white"
    android:layout_centerHorizontal="true">

    <LinearLayout
        android:id="@+id/layout_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="@dimen/margin_16"
        android:layout_marginTop="16dp">

        <ImageButton
            android:id="@+id/image_view"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/ic_check_circle"
            android:backgroundTint="#2196F3"
            android:contentDescription="@string/cekverify"/>

        <TextView
            android:id="@+id/tv_berhasil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/konfirmasipasienkamu"
            android:fontFamily="@font/roboto_medium"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:layout_marginStart="@dimen/margin_16"
            android:maxLines="2"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>

    <TextView
        android:id="@+id/apakahkamuyakin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/apakahkamuyakin"
        android:layout_below="@id/layout_title"
        android:fontFamily="@font/roboto_regular"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:layout_marginHorizontal="@dimen/margin_16"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/terms_and_condition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/denganmenerimaini"
        android:layout_below="@id/apakahkamuyakin"
        android:fontFamily="@font/roboto_light"
        android:textColor="@android:color/black"
        android:textSize="12sp"
        android:layout_marginTop="@dimen/margin_16"
        android:layout_marginHorizontal="@dimen/margin_16"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="12"
        android:orientation="horizontal"
        android:layout_below="@id/terms_and_condition"
        android:layout_marginVertical="@dimen/margin_16"
        android:layout_marginHorizontal="@dimen/margin_16">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_weight="6"
            android:background="@android:color/transparent"
            android:text="@string/batal"
            android:textColor="#2196F3"
            style="?attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/btnTerima"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_weight="6"
            android:background="@drawable/bg_button_red"
            android:backgroundTint="#2196F3"
            android:text="@string/terima"
            android:textColor="@android:color/white"
            style="?attr/buttonBarButtonStyle"/>

    </LinearLayout>


</RelativeLayout>