<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:theme="@style/ToolbarThemePrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pasien"
            android:textSize="18sp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:layout_gravity="center"/>

    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/iv_pasien"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_pasien"
        android:layout_below="@id/toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="6dp"
        android:contentDescription="@string/pasien"/>

    <TextView
        android:id="@+id/tv_selamat_datang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_pasien"
        android:text="@string/selamatdatang"
        android:textSize="18sp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"/>

    <TextView
        android:id="@+id/tv_silahkan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_selamat_datang"
        android:text="@string/silahkanmasuk"
        android:textSize="12sp"
        android:textColor="@color/textColorGray"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="4dp"/>

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:background="@drawable/bg_button_stroke_red"
        android:layout_below="@id/tv_silahkan"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="32dp"
        android:drawableStart="@drawable/ic_email"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textSize="12sp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:drawablePadding="16dp"
        android:hint="@string/hint_email"
        android:textColorHint="@color/colorPrimary"
        android:inputType="textEmailAddress"
        android:autofillHints="@string/hint_email"/>

    <TextView
        android:id="@+id/format_tidakvalid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/formattidakvalid"
        android:layout_below="@id/tv_silahkan"
        android:layout_marginTop="32dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="40dp"
        android:textSize="12sp"
        android:textColor="@color/colorPrimary"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:background="@drawable/bg_button_stroke_red"
        android:layout_below="@id/et_email"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="32dp"
        android:textSize="12sp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:drawableStart="@drawable/ic_lock"
        android:drawableEnd="@drawable/ic_eye"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:drawablePadding="16dp"
        android:hint="@string/hint_password"
        android:textColorHint="@color/colorPrimary"
        android:inputType="textPassword"
        android:autofillHints="@string/hint_password"/>

    <TextView
        android:id="@+id/tv_lupa_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_password"
        android:text="@string/lupapassword"
        android:textSize="12sp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"/>

    <Button
        android:id="@+id/btn_masuk"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:background="@drawable/bg_button_red"
        android:layout_below="@id/tv_lupa_password"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="32dp"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:fontFamily="@font/roboto_medium"
        android:textSize="18sp"
        android:text="@string/masuk"
        android:stateListAnimator="@null"
        tools:ignore="UnusedAttribute"/>

    <RelativeLayout
        android:id="@+id/btn_masuk_clone"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:background="@drawable/bg_button_red"
        android:layout_below="@id/tv_lupa_password"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/pb_mohontunggu"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:indeterminate="true"
            android:indeterminateTint="@android:color/white"
            android:indeterminateTintMode="src_atop"
            android:layout_centerVertical="true"/>

        <TextView
            android:id="@+id/mohontunggu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mohontunggu"
            android:textSize="18sp"
            android:layout_toEndOf="@id/pb_mohontunggu"
            android:textColor="@android:color/white"
            android:fontFamily="@font/roboto_medium"
            android:layout_centerVertical="true"
            android:layout_marginStart="8dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp">

        <TextView
            android:id="@+id/tv_belum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/belumpunya"
            android:textSize="12sp"
            android:textColor="@color/textColorGray"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_daftar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/daftar"
            android:textAllCaps="true"
            android:textSize="12sp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:layout_toEndOf="@id/tv_belum"
            android:layout_marginStart="4dp"/>

    </RelativeLayout>

</RelativeLayout>